--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
 	"dependencies": {
 		"react": "^0.14.6",
 		"react-dom": "^0.14.6",
-		"react-router": "2.6.1"
+		"react-redux": "4.4.5",
+		"react-router": "2.6.1",
+		"redux": "3.5.2"
 	}
 }
